# IndieStudio

./: .gitignore  CMakeLists.txt  README.md  a.out  test.cpp
archi/: Graphic_Representation.drawio
cmake/: Findassimp.cmake  Findglew.cmake  Findglm.cmake  Findraylib.cmake
cmake_modules/: Findassimp.cmake  Findglm.cmake  Findraylib.cmake
include/: GameObject.hpp  GraphicObject.hpp  IAudio.hpp  IGame.hpp  IGraphics.hpp  IInput.hpp  ILoader.hpp  Message.hpp  MessageBus.hpp  Neo.hpp  Node.hpp  Packet.hpp  PlayerConfig.hpp  includes.hpp  macros.hpp  mappings.hpp
include/Animation/: Animation.hpp  Animator.hpp  Bone.hpp  Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp
include/Audio/: Audio.hpp  IAudio.hpp
include/Communication/: Message.hpp  MessageBus.hpp  ModuleList.hpp  Node.hpp  Packet.hpp  SafeQueue.hpp
include/Core/: Core.hpp  ICore.hpp
include/Game/: Bomb.hpp  BotEngine.hpp  Game.hpp  IGame.hpp  MapGenerator.hpp  Player.hpp  PowerUp.hpp  Wall.hpp  utils.hpp
include/GraphicObject/: AnimatedFramesObj.hpp  AnimatedModelObj.hpp  GraphicObject.hpp  ModelObj.hpp  RectangleObj.hpp  SpriteObj.hpp
include/Graphics/: Graphics.hpp  IGraphics.hpp
include/Input/: IInput.hpp  Input.hpp
include/Loader/: ILoader.hpp  Loader.hpp
include/Scene/: ConfigScene.hpp  GameScene.hpp  IScene.hpp  MappingScene.hpp  MenuScene.hpp  WinningScene.hpp
resources/: last_map.txt
resources/animations/: Bomb.dae  WalkingFox.dae
resources/config/: player1.conf  player2.conf
resources/frames/: Amongus0.dae  Amongus1.dae  Amongus11.dae  Amongus13.dae  Amongus15.dae  Amongus17.dae  Amongus2.dae  Amongus3.dae  Amongus5.dae  Amongus6.dae  Amongus7.dae
resources/frames/Blue/: Blue0.dae  Blue1.dae  Blue10.dae  Blue11.dae  Blue12.dae  Blue13.dae  Blue14.dae  Blue15.dae  Blue16.dae  Blue17.dae  Blue18.dae  Blue19.dae  Blue2.dae  Blue3.dae  Blue4.dae  Blue5.dae  Blue6.dae  Blue7.dae  Blue8.dae  Blue9.dae
resources/frames/Green/: Green0.dae  Green1.dae  Green10.dae  Green11.dae  Green12.dae  Green13.dae  Green14.dae  Green15.dae  Green16.dae  Green17.dae  Green18.dae  Green19.dae  Green2.dae  Green3.dae  Green4.dae  Green5.dae  Green6.dae  Green7.dae  Green8.dae  Green9.dae
resources/frames/Red/: Red1.dae  Red10.dae  Red12.dae  Red14.dae  Red16.dae  Red18.dae  Red19.dae  Red4.dae  Red8.dae  Red9.dae
resources/frames/Yellow/: Yellow0.dae  Yellow1.dae  Yellow10.dae  Yellow11.dae  Yellow12.dae  Yellow13.dae  Yellow14.dae  Yellow15.dae  Yellow16.dae  Yellow17.dae  Yellow18.dae  Yellow19.dae  Yellow2.dae  Yellow3.dae  Yellow4.dae  Yellow5.dae  Yellow6.dae  Yellow7.dae  Yellow8.dae  Yellow9.dae
resources/models/: Asteroid1.dae  Asteroid2.dae  Asteroid3.dae  Block.dae  Bomb.dae  BombUp.dae  ComingSoon.dae  Config.dae  Explosion.dae  Fire.dae  FireUp.dae  FloofFox.dae  Planet.dae  Play.dae  Podium.dae  Quit.dae  RoboCat.dae  SpaceShip.dae  SpeedUp.dae  SphereBackground.dae  Wall.dae  WallPass.dae  untitled.dae
resources/shaders/: camera.fs  camera.vs
ressources/: input.conf
ressources/animations/: WalkingFox.dae
ressources/config/: player1.conf  player2.conf
ressources/input/: player1.conf
ressources/models/: Cube.dae  FloofFox.dae
src/: Camera.cpp  GameObject.cpp  GraphicObject.cpp  Message.cpp  MessageBus.cpp  Neo.cpp  Node.cpp  Packet.cpp  PlayerConfig.cpp  main.cpp  mappings.cpp
src/Animation/: Animation.cpp  Animator.cpp  Bone.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/Audio/: Audio.cpp
src/Communication/: Message.cpp  MessageBus.cpp  Node.cpp  Packet.cpp  SafeQueue.cpp
src/Core/: Core.cpp
src/Game/: Bomb.cpp  BotEngine.cpp  Game.cpp  MapGenerator.cpp  Player.cpp  PowerUp.cpp  Wall.cpp
src/GraphicObject/: AnimatedFramesObj.cpp  AnimatedModelObj.cpp  GraphicObject.cpp  ModelObj.cpp  RectangleObj.cpp  SpriteObj.cpp
src/Graphics/: Graphics.cpp
src/Input/: Input.cpp
src/Loader/: Loader.cpp
src/Scene/: ConfigScene.cpp  GameScene.cpp  MappingScene.cpp  MenuScene.cpp  WinningScene.cpp
